[package]
name = "rust-tokio-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
warp = "0.3.1"
tokio-stream = { version = "0.1.1", features = ["net"]}